fixed the url paths

--- a/prdct-preview-card/index.html
+++ b/prdct-preview-card/index.html
@@ -30,7 +30,7 @@
 			rel="stylesheet"
 		/>
 		<!-- style sheet -->
-		<link rel="stylesheet" href="/css/base.css" />
+		<link rel="stylesheet" href="css/base.css" />
 		<title>Perfume Card</title>
 	</head>
 	<body>
@@ -38,12 +38,12 @@
 			<section id="sct-perfume">
 				<div class="card" style="width: 36rem">
 					<img
-						src="/imgs/image-product-mobile.jpg"
+						src="imgs/image-product-mobile.jpg"
 						class="card-img-top d-lg-none"
 						alt="perfume"
 					/>
 					<img
-						src="/imgs/image-product-desktop.jpg"
+						src="imgs/image-product-desktop.jpg"
 						class="card-img-top col-lg-6 d-none d-lg-flex"
 						alt="perfume"
 					/>
